<resources>
  <string name="app_name">Movie Recommendations</string>
  <string name="movie_poster">movie poster</string>
  <string name="genre">Genre</string>
  <string name="search">Search</string>
  <string name="expand">More</string>
  <string name="collapse">Less</string>
  <string name="popular_movies_btn_hint">Most popular movies atm</string>
  <string name="popular">Popular</string>
  <string name="top">Top Rated</string>
  <string name="upcoming">Upcoming</string>
  <string name="custom">Custom Filter</string>
  <string name="top_btn_hint">Best movies of all time</string>
  <string name="upcoming_btn_hint">Upcoming movies</string>
  <string name="original_title">Original title</string>
  <string name="revenue">Revenue</string>
  <string name="budget">Budget</string>
  <string name="cast">Cast</string>
  <string name="keywords">Keywords</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <array name="genres">
    <item>Comedy</item>
    <item>Fantasy</item>
    <item>Action</item>
    <item>Adventure</item>
    <item>Animation</item>
    <item>Crime</item>
    <item>Documentary</item>\
    <item>Drama</item>
    <item>Family</item>
    <item>History</item>
    <item>Horror</item>
    <item>Music</item>
    <item>Mystery</item>
    <item>Romance</item>
    <item>Science Fiction</item>
    <item>TV Movie</item>
    <item>Thriller</item>
    <item>War</item>
    <item>Western</item>
  </array>
  <array name="filters">
    <item>Recommendations</item>
    <item>Popular</item>
    <item>Top Rated</item>
    <item>Custom filter</item>
  </array>
  <array name="filtersValues">
    <item>recommendations</item>
    <item>popular</item>
    <item>top_rated</item>
    <item>custom</item>
  </array>
  <string name="hours_short">h</string>
  <string name="minutes_short">m</string>
  <string name="original_language">Original language</string>
  <string name="runtime">Runtime</string>
  <string name="status">Status</string>
  <string name="unknown">Unknown</string>
  <string name="drawer_open" translatable="false">Open navigation drawer</string>
  <string name="drawer_close" translatable="false">Close navigation drawer</string>
  <string name="no_internet_connection_msg">No internet connection</string>
  <string name="reload">Reload</string>
  <string name="movies">Movies</string>
  <string name="tvshows">TV Shows</string>
  <string name="on_air">On Air</string>
  <string name="info">Info</string>
  <string name="person_credits">Credits</string>
  <string name="biography">Biography</string>
  <string name="gender">Gender</string>
  <string name="facts">Facts</string>
  <string name="place_of_birth">Place of birth</string>
  <string name="popularity">Popularity</string>
  <array name="genders">
    <item>Unknown</item>
    <item>Female</item>
    <item>Male</item>
  </array>
  <string name="reviews">Reviews</string>
  <string name="rating">Rating</string>
  <string name="overview">Overview</string>
  <string name="images">Images</string>
  <string name="movie_credits">Credits</string>
  <string name="production_countries">Production</string>
  <string name="genres">Genres</string>
  <string name="choose_genres">Genres</string>
  <string name="header">Header</string>
  <string name="choose_sort">SortType</string>
  <string name="choose_sort_direction">SortType direction</string>
  <string name="no_internet">Seems like there are some problems with connecting</string>
  <string name="retry">Retry</string>
  <string name="no_reviews">No reviews yet</string>
  <string name="startup_filter">Default filter on start</string>
  <string name="created_by">Created by</string>
  <string name="episode_runtime">Episode runtime</string>
  <string name="last_air_date">Last air date</string>
  <string name="number_of_seasons">Number of seasons</string>
  <string name="no_seasons">There are no seasons yet</string>
  <string name="seasons">Seasons</string>
  <string name="season">Season</string>
  <string name="separator" translatable="false">|</string>
  <plurals name="episodes">
    <item quantity="one">%d episode</item>
    <item quantity="other">%d episodes</item>
  </plurals>

  <string name="drawer_settings">Settings</string>
  <string name="search_hint_movies">Search for movies</string>
  <string name="search_hint_tvshows">Search for TV Shows</string>
  <string name="range_of_years_tv">Years</string>
  <string name="sort_by_popularity">Sort by popularity</string>
  <string name="sort_avg_votes">Sort by average votes</string>
  <string name="in_descending_order">in descending order</string>
  <string name="in_ascending_order">In ascending order</string>
  <string name="favorites">Favorites</string>
  <string name="favorites_activity_msg">There is no favorites yet</string>
  <string name="recommend">Recommendations</string>
  <string name="movie_setup_title">Choose movies you like</string>
  <string name="tvshow_setup_title">Choose TV Shows you like</string>
  <string name="skip">Skip</string>
  <string name="save_preset">Save preset</string>
  <string name="save_filter_dialog_title">Enter name for this preset</string>
  <string name="custom_filter_presets">Custom Filter Presets</string>
  <string name="to_many_presets">Can\'t add more presets</string>
</resources>
