<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:id="@+id/nav_main"
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_recommended"
      android:icon="@drawable/recommended"
      android:title="@string/recommend" />
    <item
      android:id="@+id/nav_popular"
      android:icon="@drawable/popular_icon"
      android:title="@string/popular" />
    <item
      android:id="@+id/nav_top"
      android:icon="@drawable/top_icon"
      android:title="@string/top" />

    <item
      android:id="@+id/nav_custom"
      android:icon="@drawable/custom_filter_icon"
      android:title="@string/custom" />
    <item
      android:id="@+id/nav_upcoming_or_on_air"
      android:icon="@drawable/upcoming_icon"
      android:title="@string/upcoming" />
    <item
      android:id="@+id/nav_favorite"
      android:icon="@drawable/favorite_icon"
      android:title="@string/favorites" />
  </group>

  <group
    android:id="@+id/nav_bottom"
    android:checkableBehavior="none">
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/settings_icon"
      android:title="@string/drawer_settings" />
  </group>
</menu>