<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/movie_info_facts_hint"
            style="@style/InfoHintHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facts"
            android:layout_alignLeft="@+id/movie_info_overview_placeholder"
            android:layout_alignStart="@+id/movie_info_overview_placeholder"
            />

        <TextView
            android:id="@+id/movie_info_vote_average_hint"
            style="@style/InfoHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/movie_info_facts_hint"
            android:layout_alignStart="@id/movie_info_facts_hint"
            android:layout_below="@id/movie_info_facts_hint"
            android:text="@string/rating"/>

        <TextView
            android:id="@+id/movie_info_vote_average"
            style="@style/InfoFact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/movie_info_vote_average_hint"
            android:layout_toEndOf="@id/movie_info_vote_average_hint"
            android:layout_marginLeft="@dimen/fact_hint_spacing"
            android:layout_marginStart="@dimen/fact_hint_spacing"
            android:layout_alignBottom="@id/movie_info_vote_average_hint"
            android:text="@string/unknown"/>

        <TextView
            android:id="@+id/movie_info_overview_hint"
            style="@style/InfoHintHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:layout_alignLeft="@+id/movie_info_overview_placeholder"
            android:layout_alignStart="@+id/movie_info_overview_placeholder"
            android:layout_below="@id/movie_info_vote_average_hint"
            android:layout_marginTop="@dimen/after_facts_spacing"
            />

        <android.support.v7.widget.CardView
            android:id="@+id/movie_info_overview_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_info_overview_hint"
            android:layout_margin="@dimen/big_text_in_cardview_margin"
            android:background="@color/cardview_dark_background"
            app:cardCornerRadius="@dimen/big_text_in_cardview_corner_radius"
            app:cardElevation="@dimen/big_text_in_cardview_elevation"
            app:contentPadding="@dimen/big_text_in_cardview_padding">

            <at.blogc.android.views.ExpandableTextView
                android:id="@+id/movie_info_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:gravity="start"
                android:textSize="@dimen/overview_font_size"
                app:animation_duration="1000" />


        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/movie_info_biography_expand_btn"
            android:layout_width="@dimen/expand_button_width"
            android:layout_height="@dimen/expand_button_width"
            android:layout_below="@id/movie_info_overview_placeholder"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_arrow_down"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_info_images_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_info_biography_expand_btn"/>

        <RelativeLayout
            android:id="@+id/movie_info_progress_bar_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">

            <ProgressBar
                android:id="@+id/movie_info_progress_bar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>